--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -18,22 +18,22 @@
     <p class="lead">{{job.location}}</p>
 
     <h4>Salary</h4>
-    <p>{{job.currency}}{{job.salary}}</p>
+    <p class="mt-3">{{job.currency}}{{job.salary}}</p>
 
     <h4>Responsibilities</h4>
         <ul>
             {% for line in job.responsibilities.split(".") %}
-            <li>{{line}}.</li>
+            <li class="mt-4">{{line}}.</li>
             {% endfor %}
         </ul>
 
     <h4 class="mt-5">Requirements</h4>
             <ol>
             {% for line in job.requirements.split(".") %}
-            <li>{{line}}.</li>
+            <li class="mt-4">{{line}}.</li>
             {% endfor %}
         </ol>
-
+        {% include 'form.html' %}
 
 </div>
 {% include 'footer.html' %}
