Changed Styling a lil bit

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -13,7 +13,7 @@
         Jovian Careers
       </h1>
 
-    <b> Your application form for the role of "{{job['title']}}" at Jovian has been submitted.</b>
+    <p> Your application form for the role of <b>{{job['title']}}</b> at Jovian has been submitted.</p>
 
 <b>Full Name</b>
 <div class="mb-2">{{application['full_name']}}</div>
