--- a/templates/form.html
+++ b/templates/form.html
@@ -4,6 +4,14 @@
 <h4 class="mt-4">Application Form</h4>
 <form id="demo-form" method="post" action="/job/{{job['id']}}/apply">
  <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfIfzUmAAAAACTUgOOSD-k7KE-tIr77TvllKe0k"></script>
+<script>
+grecaptcha.enterprise.ready(function() {
+    grecaptcha.enterprise.execute('{{token}}', {action: 'login'}).then(function(token) {
+       ...
+    });
+});
+</script>
     <div class="mb-5">
     <label class="mt-4">Full Name: </label><br>
     <input type="text" name="full_name" placeholder="Bruce Wayne" required><br>
@@ -30,6 +38,14 @@
      document.getElementById("demo-form").submit();
    }
  </script>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfIfzUmAAAAACTUgOOSD-k7KE-tIr77TvllKe0k"></script>
+<!--<script>-->
+<!--grecaptcha.enterprise.ready(function() {-->
+<!--    grecaptcha.enterprise.execute('6LfIfzUmAAAAACTUgOOSD-k7KE-tIr77TvllKe0k', {action: 'login'}).then(function(token) {-->
+<!--       ...-->
+<!--    });-->
+<!--});-->
+<!--</script>-->
 </form>
 </body>
 </html>
