--- a/templates/form.html
+++ b/templates/form.html
@@ -21,7 +21,7 @@
     </div>
     <div>
         <label class="mt-4">Resume URL</label><br>
-    <input class="mb-4" type="url" name="resume_url" required><br>
+    <input class="mb-4" type="url" name="resume_url"><br>
 </div>
     <button data-sitekey="{{sitekey}}" data-callback='onSubmit' data-action='submit' class="btn btn-outline-primary float-right align-middle" type="submit" value="Submit">Submit</button>
      <script>
